added new documents

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 				<div class="card-content card-content-vip">
 					<div class="card-content-heading">
 						<h2>Juraj Vincúr</h2>
-						<small>Vedúci projektu</small>
+						<small>Product owner</small>
 					</div>
 					<div class="card-content-list">
 						<ul>
-							<li>Komunikácia s product ownerom</li>
+							<li>Komunikácia so zákazníkom</li>
 							<li>Konzultant</li>
 						</ul>
 					</div>
@@ -111,7 +111,7 @@
 				<div class="card-content">
 					<div class="card-content-heading">
 						<h2>Adam Novák</h2>
-						<small>Team leader</small>
+						<small>Manažér webu</small>
 					</div>
 					<div class="card-content-list">
 						<ul>
@@ -304,7 +304,7 @@
 					<div class="timeline-week-panel-image-container timeline-flex-right">
 						<div class="timeline-week-panel-image-description">
 							<h2>
-								'Watson'
+								'Glen'
 							</h2>
 							<small>
 								Negotiations
@@ -355,7 +355,7 @@
 						<img src="images/tyzden-1.png" class="timeline-week-panel-image timeline-week-panel-image-right">
 						<div class="timeline-week-panel-image-description">
 							<h2>
-								'Kabuki'
+								'Downtown'
 							</h2>
 							<small>
 								Coming together
